--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-o11y-with-google-cloud",
+  "name": "frontend-o11y-on-gcloud",
   "version": "0.1.0",
   "private": true,
   "scripts": {
